@@ -18,12 +18,13 @@ String[] classpathLibraries = ['lib/patch.jar','lib/brand.jar','lib/brand_api.ja
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
     }
     dependencies {
         classpath group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '4.9.0'
-        classpath group: 'com.jfrog.bintray.gradle', name: 'gradle-bintray-plugin', version: '1.8.4'
-        classpath group: 'org.zeroturnaround', name: 'gradle-jrebel-plugin', version: '1.1.8'
     }
 }
 
@@ -31,11 +32,11 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'java'
 apply plugin: 'distribution'
-apply plugin: 'rebel'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // mavenCentral()
+    flatDir { dirs "libz" }
     if (buildAccess == 'internal') {
         maven {
             url 'https://cae-artifactory.jpl.nasa.gov/artifactory/maven-libs-snapshot-virtual'
@@ -61,7 +62,10 @@ repositories {
             }
         }
     }
-    jcenter()
+    mavenCentral()
+    maven {
+        url 'https://repo.gradle.org/gradle/libs-releases-local/'
+    }
 }
 
 configurations {
@@ -71,36 +75,38 @@ configurations {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
+    implementation group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
 
     // Test Dependencies
     //testCompile 'junit:junit:4.11'
-    testCompile group: 'org.gradle', name: 'gradle-core', version: '3.5.1'
-    testCompile group: 'org.gradle', name: 'gradle-base-services', version: '3.5.1'
-    testCompile group: 'org.gradle', name: 'gradle-messaging', version: '3.5.1'
-    testCompile group: 'org.gradle', name: 'gradle-logging', version: '3.5.1'
-    testCompile group: 'org.gradle', name: 'gradle-process-services', version: '3.5.1'
-    testCompile group: 'org.gradle', name: 'gradle-tooling-api', version: '3.5.1'
+    testImplementation group: 'org.gradle', name: 'gradle-core', version: '6.1.1'
+    testImplementation group: 'org.gradle', name: 'gradle-base-services', version: '6.1.1'
+    testImplementation group: 'org.gradle', name: 'gradle-messaging', version: '6.1.1'
+    testImplementation group: 'org.gradle', name: 'gradle-logging', version: '6.1.1'
+    testImplementation group: 'org.gradle', name: 'gradle-process-services', version: '6.1.1'
+    testImplementation group: 'org.gradle', name: 'gradle-worker-processes', version: '6.1.1'
+    testImplementation group: 'org.gradle', name: 'gradle-tooling-api', version: '6.1.1'
 
     testPublish group: 'org.openmbee.testrail', name: 'testrail-cli', version: '1.0.1'
-    
+
     // Other dependencies we're unable to resolve via standard repositories
 
     if (buildAccess == 'internal') {
         preCompile group: 'gov.nasa.jpl.cae.nomagic', name: 'cae-cameo-systems-modeler-core', version: '4.3.1', classifier: 'linux', ext: 'zip'
     }
     else {
-        preCompile group: 'com.nomagic', name: 'demomagicdraw', version: '190sp3', classifier: 'MagicDraw_Demo_190_sp3_no_install', ext: 'zip'
-        preCompile group: 'com.nomagic', name: 'sysml', version: '190sp3', classifier: 'SysML_Plugin_190_sp3_bundle', ext: 'zip'
-        preCompile group: 'com.nomagic', name: 'cst', version: '190sp3', classifier: 'Cameo_Simulation_Toolkit_Plugin_190_sp3', ext: 'zip'
+        preCompile group: 'com.nomagic', name: 'democsm', version: '2022xRefresh1', classifier: 'Cameo_Systems_Modeler_2022x_Refresh1_HF1_no_install', ext: 'zip'
+
+        //preCompile group: 'com.nomagic', name: 'sysml', version: '190sp3', classifier: 'SysML_Plugin_190_sp3_bundle', ext: 'zip'
+        //preCompile group: 'com.nomagic', name: 'cst', version: '190sp3', classifier: 'Cameo_Simulation_Toolkit_Plugin_190_sp3', ext: 'zip'
     }
-    preCompile group: 'org.openmbee.magicdraw.mdk', name: 'mdk', version: '4.4.2', classifier: 'plugin', ext: 'zip'
+    preCompile group: 'org.openmbee.mdk.magic', name: 'mdk', version: '6.0.0-RC1', classifier: 'plugin', ext: 'zip'
 
     // This ensures classpath load order to match the MagicDraw provided order and then includes extras needed for non-OpenAPI stuff.
     // This was necessary because of the Application class stubbing that was done in the chromium libraries.
-    compile files(classpathLibraries.collect { 'build/dependency-cache/extracted/' + it })
-    compile fileTree(dir: 'build/dependency-cache/extracted', include: ['lib/**/*.jar', 'plugins/**/*.jar'], exclude: ([ classpathLibraries, ['plugins/com.nomagic.collaborator.publisher/**/*.jar', 'plugins/com.nomagic.magicdraw.emfuml2xmi*/**/*.jar', 'plugins/com.nomagic.magicdraw.automaton/lib/engines/**/*.jar', 'plugins/tomsawyer/**/*.jar'] ]).flatten())
-    compile fileTree(dir: 'lib', include: ['**/*.jar'])
+    implementation files(classpathLibraries.collect { 'build/dependency-cache/extracted/' + it })
+    implementation fileTree(dir: 'build/dependency-cache/extracted', include: ['lib/**/*.jar', 'plugins/**/*.jar'], exclude: ([classpathLibraries, ['plugins/com.nomagic.collaborator.publisher/**/*.jar', 'plugins/com.nomagic.magicdraw.emfuml2xmi*/**/*.jar', 'plugins/com.nomagic.magicdraw.automaton/lib/engines/**/*.jar', 'plugins/tomsawyer/**/*.jar'] ]).flatten())
+    implementation fileTree(dir: 'lib', include: ['**/*.jar'])
 }
 
 task extractDependencies {
@@ -171,7 +177,7 @@ task testsHackJar(type: Jar, dependsOn: testClasses) {
 
     manifest {
         attributes(
-                'Main-Class': 'gov.nasa.jpl.mbee.mdk.test.framework.GradleMagicDrawLauncher'
+                'Main-Class': 'org.openmbee.mdk.test.framework.GradleMagicDrawLauncher'
         )
     }
 }
@@ -278,7 +284,6 @@ distZip.dependsOn preDist
 
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
-apply plugin: 'com.jfrog.bintray'
 
 publishing {
     // Reference to Gradle publications defined in the build script.
@@ -328,17 +333,6 @@ artifactory {
 
 artifactoryPublish.dependsOn distZip
 
-bintray {
-    user = project.getProperties().get('bintrayUser')
-    key = project.getProperties().get('bintrayKey')
-    publications = ['mavenJava']
-    publish = true
-    pkg {
-        repo = project.getProperties().get('bintrayRepo')
-        name = rootProject.name
-        userOrg = project.getProperties().get('bintrayUserOrg')
-    }
-}
 
 installDist {
     destinationDir = file('build/plugin')
@@ -364,14 +358,13 @@ task runJava(type: JavaExec) {
     standardOutput = System.out
     errorOutput = System.err
 
-    main = 'com.nomagic.osgi.launcher.ProductionFrameworkLauncher'
-    jvmArgs = ['-Xmx8192M', '-Xss512M', '-DLOCALCONFIG=true', '-DWINCONFIG=true', '-Djsse.enableSNIExtension=false', '-Djava.net.preferIPv4Stack=true', '-Dcom.sun.media.imageio.disableCodecLib=true', '-noverify', '-Dlocal.config.dir.ext=-dev', '-splash:data/splash.png', '-Dmd.class.path=$java.class.path', '-Dcom.nomagic.osgi.config.dir=configuration', '-Desi.system.config=data/application.conf', '-Dlogback.configurationFile=data/logback.xml', '-Dsun.locale.formatasdefault=true', '-Dorg.osgi.framework.bundle.parent=ext']
+    main = 'com.nomagic.magicdraw.Main'
+    jvmArgs = ['-Xmx8192M', '-Xss512M', '-DLOCALCONFIG=true', '-DWINCONFIG=true', '-Djsse.enableSNIExtension=false', '-Djava.net.preferIPv4Stack=true', '-Dcom.sun.media.imageio.disableCodecLib=true', '-noverify', '-Dlocal.config.dir.ext=-dev', '-splash:data/splash.png', '-Dmd.class.path=$java.class.path', '-Desi.system.config=data/application.conf', '-Dlogback.configurationFile=data/logback.xml', '-Dsun.locale.formatasdefault=true', '-Djdk.attach.allowAttachSelf=true']
     // arguments to pass to the application
     args 'DEVELOPER'
 }
 
 runJava.dependsOn installDist
-runJava.dependsOn generateRebel
 
 task runScript(type: Exec) {
     workingDir "build/install"
